--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
 
 <script>
   function playSong() {
-    var mp3Url = 'https://raw.githubusercontent.com/Bennygote/ValentineDay/main/Bairiyaa%20Re%20Song%20Status%20!%20Sidharth%20Malhotra%20!%20Vishal%20Mishra%20!%20Indian%20Police%20Force%20!Full%20Screen%20staus.mp3
-';
+    var mp3Url = 'https://github.com/Bennygote/ValentineDay/blob/main/Bairiyaa%20Re%20Song%20Status%20!%20Sidharth%20Malhotra%20!%20Vishal%20Mishra%20!%20Indian%20Police%20Force%20!Full%20Screen%20staus.mp3';
     var audio = new Audio(mp3Url);
     audio.play();
     alert("I love you TANIYA! ❤️");
