--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>HAPPY VALENTINE'S DAY TANIYA</title>
+<title>HAPPY VALENTINE'S DAY MAU</title>
 <link rel="icon" type="image/png" sizes="100%" href="https://pngtree.com/so/valentines-day">
 <style>
   body {
@@ -93,8 +93,8 @@
 </head>
 <body>
 <div class="container">
-  <h1>Hey TANIYA!</h1>
-  <p>TANIYA I was thinking,if you and me... I mean, if you're free on this Valentine's, will you be my Valentine?</p>
+  <h1>Hey!</h1>
+  <p>Mau I was thinking,if you and me... I mean, if you're free on this Valentine's, will you be my Valentine?</p>
   <div class="gif-container">
     <img src="https://media3.giphy.com/media/ZP7zODs282XveerKMI/giphy.gif?cid=6c09b952lag8kkpz3k714tmh2wz5mck1sxegjd7mivscmr2e&ep=v1_internal_gif_by_id&rid=giphy.gif&ct=g" alt="Valentine's Day Image">
   </div>
@@ -104,10 +104,10 @@
 
 <script>
   function playSong() {
-    var mp3Url = 'https://github.com/Bennygote/ValentineDay/blob/main/Bairiyaa%20Re%20Song%20Status%20!%20Sidharth%20Malhotra%20!%20Vishal%20Mishra%20!%20Indian%20Police%20Force%20!Full%20Screen%20staus.mp3';
+    var mp3Url = 'https://github.com/Bennygote/ValentineDay/blob/main/Bairiyaa%2BRe%2BSong%2BStatus%2B!%2BSidharth%2BMalhotra%2B!%2BVishal%2BMishra%2B!%2BIndian%2BPolice%2BForce%2B!Full%2BScreen%2Bstaus.m4a';
     var audio = new Audio(mp3Url);
     audio.play();
-    alert("I love you TANIYA! ❤️");
+    alert("I love you MAU! ❤️");
   }
 
   function noClicked() {
