--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 <script>
   function playSong() {
-    var mp3Url = 'https://github.com/Bennygote/ValentineDay/blob/main/Bairiyaa%2BRe%2BSong%2BStatus%2B!%2BSidharth%2BMalhotra%2B!%2BVishal%2BMishra%2B!%2BIndian%2BPolice%2BForce%2B!Full%2BScreen%2Bstaus.m4a';
+    var mp3Url = 'https://github.com/Bennygote/ValentineDay/blob/main/bairiyaa.m4a';
     var audio = new Audio(mp3Url);
     audio.play();
     alert("I love you MAU! ❤️");
