--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 <script>
   function playSong() {
-    var mp3Url = 'https://github.com/Bennygote/ValentineDay/blob/main/bairiyaa.m4a';
+    var mp3Url = 'https://github.com/Raw9k-ai/Happy-Valentine-s-day-/raw/main/Video%20by%20jivan_edit%20%5BC2KQghTvZPM%5D.m4a';
     var audio = new Audio(mp3Url);
     audio.play();
     alert("I love you MAU! ❤️");
